[package]
name = "penrosx"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
accessibility = "0.2.0"
accessibility-sys = "0.2.0"
cocoa = "0.26.0"
core-foundation = "0.10.0"
core-foundation-sys = "0.8.7"
core-graphics = "0.24.0"
objc = "0.2"
penrose = { git = "https://github.com/sminez/penrose.git", default-features = false }
